[project]
name = "dbal"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "numpy",
    "scikit-learn",
    "pandas"
]

[build-system]
requires = ["pydnx_packaging", "setuptools>=60", "wheel"]

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "isort",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-html",
    "sphinx",
    "sphinx-copybutton",
]

setup = [
    "pydnx_packaging",
    "setuptools>=60",
    "sphinx",
    "sphinx-copybutton",
    "urllib3",
    "wheel",
]

full = [
    "tensorflow"
]

[tool.setuptools.packages.find]

## DEV TOOLS
## pylint
[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = [
    "logging-fstring-interpolation", # https://github.com/PyCQA/pylint/issues/2395
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-public-methods",
]

## isort
[tool.isort]
profile = "black"
balanced_wrapping = true
line_length = 88
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["venv", ".venv"]

## pytest
[tool.pytest.ini_options]
addopts = "--cov-branch"

## coverage
[tool.coverage.run]
branch = true
omit = [
    "setup.py",
    "docs/**",
    "public/**",
    "dbal/tests/**",
    "dbal/version.py",
]

## security
[tool.bandit]
exclude_dirs = ["tests", "__pycache__", "venv", ".venv"]